Add Select All to Android floating insertion menu

Currently the insertion paste popup menu doesn't have the "Select All" option which
is a mismatch from how the native Android menu works.

BUG=615435

Review-Url: https://codereview.chromium.org/2722273002
Cr-Commit-Position: refs/heads/master@{#464106}

Former-commit-id: 8bf0dbc4326668e5a12f974f783e5543b78fe4f9